fix overlapping images
fixed issue #10

--- a/foodclub3/blog/static/style.css
+++ b/foodclub3/blog/static/style.css
@@ -49,7 +49,7 @@ ul#grid {
 #grid li {
 		float: left;
 		padding: 0;
-		margin: 0;
+		margin: 15px;
 		width:262px;
 		height:197px;
 } 
